--- a/beszel/site/src/locales/ar/ar.po
+++ b/beszel/site/src/locales/ar/ar.po
@@ -556,6 +556,10 @@ msgstr "يرجى تسجيل الدخول إلى حسابك"
 msgid "Port"
 msgstr "المنفذ"
 
+#: src/components/routes/system.tsx:398
+msgid "Precise utilization at the recorded time"
+msgstr "الاستخدام الدقيق في الوقت المسجل"
+
 #: src/components/routes/settings/general.tsx:58
 msgid "Preferred Language"
 msgstr "اللغة المفضلة"
@@ -731,10 +735,6 @@ msgstr "يتم التفعيل عندما يتجاوز استخدام وحدة ا
 msgid "Triggers when memory usage exceeds a threshold"
 msgstr "يتم التفعيل عندما يتجاوز استخدام الذاكرة عتبة معينة"
 
-#: src/components/routes/system.tsx:398
-msgid "Triggers when memory usage exceeds a threshold."
-msgstr "يتم التفعيل عندما يتجاوز استخدام الذاكرة عتبة معينة."
-
 #: src/lib/utils.ts:285
 msgid "Triggers when status switches between up and down"
 msgstr "يتم التفعيل عندما يتغير الحالة بين التشغيل والإيقاف"
@@ -806,4 +806,3 @@ msgstr "تكوين YAML"
 #: src/components/routes/settings/layout.tsx:34
 msgid "Your user settings have been updated."
 msgstr "تم تحديث إعدادات المستخدم الخاصة بك."
-
