--- a/beszel/site/src/locales/fr/fr.po
+++ b/beszel/site/src/locales/fr/fr.po
@@ -556,6 +556,10 @@ msgstr "Veuillez vous connecter à votre compte"
 msgid "Port"
 msgstr "Port"
 
+#: src/components/routes/system.tsx:398
+msgid "Precise utilization at the recorded time"
+msgstr "Utilisation précise au moment enregistré"
+
 #: src/components/routes/settings/general.tsx:58
 msgid "Preferred Language"
 msgstr "Langue préférée"
@@ -731,10 +735,6 @@ msgstr "Déclenchement lorsque l'utilisation du CPU dépasse un seuil"
 msgid "Triggers when memory usage exceeds a threshold"
 msgstr "Déclenchement lorsque l'utilisation de la mémoire dépasse un seuil"
 
-#: src/components/routes/system.tsx:398
-msgid "Triggers when memory usage exceeds a threshold."
-msgstr "Déclenchement lorsque l'utilisation de la mémoire dépasse un seuil."
-
 #: src/lib/utils.ts:285
 msgid "Triggers when status switches between up and down"
 msgstr "Déclenchement lorsque le statut passe de haut en bas"
@@ -806,4 +806,3 @@ msgstr "Configuration YAML"
 #: src/components/routes/settings/layout.tsx:34
 msgid "Your user settings have been updated."
 msgstr "Vos paramètres utilisateur ont été mis à jour."
-
