--- a/beszel/site/src/locales/ja/ja.po
+++ b/beszel/site/src/locales/ja/ja.po
@@ -556,6 +556,10 @@ msgstr "アカウントにサインインしてください"
 msgid "Port"
 msgstr "ポート"
 
+#: src/components/routes/system.tsx:398
+msgid "Precise utilization at the recorded time"
+msgstr "記録された時点での正確な利用"
+
 #: src/components/routes/settings/general.tsx:58
 msgid "Preferred Language"
 msgstr "優先言語"
@@ -731,10 +735,6 @@ msgstr "CPU使用率がしきい値を超えたときにトリガーされます
 msgid "Triggers when memory usage exceeds a threshold"
 msgstr "メモリ使用率がしきい値を超えたときにトリガーされます"
 
-#: src/components/routes/system.tsx:398
-msgid "Triggers when memory usage exceeds a threshold."
-msgstr "メモリ使用率がしきい値を超えたときにトリガーされます。"
-
 #: src/lib/utils.ts:285
 msgid "Triggers when status switches between up and down"
 msgstr "ステータスが上から下に切り替わるときにトリガーされます"
@@ -806,4 +806,3 @@ msgstr "YAML設定"
 #: src/components/routes/settings/layout.tsx:34
 msgid "Your user settings have been updated."
 msgstr "ユーザー設定が更新されました。"
-
