--- a/beszel/site/src/locales/pt/pt.po
+++ b/beszel/site/src/locales/pt/pt.po
@@ -556,6 +556,10 @@ msgstr "Por favor, entre na sua conta"
 msgid "Port"
 msgstr "Porta"
 
+#: src/components/routes/system.tsx:398
+msgid "Precise utilization at the recorded time"
+msgstr "Utilização precisa no momento registrado"
+
 #: src/components/routes/settings/general.tsx:58
 msgid "Preferred Language"
 msgstr "Idioma Preferido"
@@ -731,10 +735,6 @@ msgstr "Dispara quando o uso de CPU excede um limite"
 msgid "Triggers when memory usage exceeds a threshold"
 msgstr "Dispara quando o uso de memória excede um limite"
 
-#: src/components/routes/system.tsx:398
-msgid "Triggers when memory usage exceeds a threshold."
-msgstr "Dispara quando o uso de memória excede um limite."
-
 #: src/lib/utils.ts:285
 msgid "Triggers when status switches between up and down"
 msgstr "Dispara quando o status alterna entre ativo e inativo"
@@ -806,4 +806,3 @@ msgstr "Configuração YAML"
 #: src/components/routes/settings/layout.tsx:34
 msgid "Your user settings have been updated."
 msgstr "As configurações do seu usuário foram atualizadas."
-
