--- a/beszel/site/src/locales/tr/tr.po
+++ b/beszel/site/src/locales/tr/tr.po
@@ -556,6 +556,10 @@ msgstr "Lütfen hesabınıza giriş yapın"
 msgid "Port"
 msgstr "Port"
 
+#: src/components/routes/system.tsx:398
+msgid "Precise utilization at the recorded time"
+msgstr "Kayıtlı zamanda kesin kullanım"
+
 #: src/components/routes/settings/general.tsx:58
 msgid "Preferred Language"
 msgstr "Tercih Edilen Dil"
@@ -731,10 +735,6 @@ msgstr "CPU kullanımı bir eşiği aştığında tetiklenir"
 msgid "Triggers when memory usage exceeds a threshold"
 msgstr "Bellek kullanımı bir eşiği aştığında tetiklenir"
 
-#: src/components/routes/system.tsx:398
-msgid "Triggers when memory usage exceeds a threshold."
-msgstr "Bellek kullanımı bir eşiği aştığında tetiklenir."
-
 #: src/lib/utils.ts:285
 msgid "Triggers when status switches between up and down"
 msgstr "Durum yukarı ve aşağı arasında değiştiğinde tetiklenir"
@@ -806,4 +806,3 @@ msgstr "YAML Yapılandırması"
 #: src/components/routes/settings/layout.tsx:34
 msgid "Your user settings have been updated."
 msgstr "Kullanıcı ayarlarınız güncellendi."
-
