--- a/beszel/site/src/locales/vi/vi.po
+++ b/beszel/site/src/locales/vi/vi.po
@@ -556,6 +556,10 @@ msgstr "Vui lòng đăng nhập vào tài khoản của bạn"
 msgid "Port"
 msgstr "Cổng"
 
+#: src/components/routes/system.tsx:398
+msgid "Precise utilization at the recorded time"
+msgstr "Sử dụng chính xác tại thời điểm ghi nhận"
+
 #: src/components/routes/settings/general.tsx:58
 msgid "Preferred Language"
 msgstr "Ngôn ngữ Ưa thích"
@@ -731,10 +735,6 @@ msgstr "Kích hoạt khi sử dụng CPU vượt quá ngưỡng"
 msgid "Triggers when memory usage exceeds a threshold"
 msgstr "Kích hoạt khi sử dụng bộ nhớ vượt quá ngưỡng"
 
-#: src/components/routes/system.tsx:398
-msgid "Triggers when memory usage exceeds a threshold."
-msgstr "Kích hoạt khi sử dụng bộ nhớ vượt quá ngưỡng."
-
 #: src/lib/utils.ts:285
 msgid "Triggers when status switches between up and down"
 msgstr "Kích hoạt khi trạng thái chuyển đổi giữa lên và xuống"
@@ -806,4 +806,3 @@ msgstr "Cấu hình YAML"
 #: src/components/routes/settings/layout.tsx:34
 msgid "Your user settings have been updated."
 msgstr "Cài đặt người dùng của bạn đã được cập nhật."
-
