--- a/beszel/site/src/locales/zh-CN/zh-CN.po
+++ b/beszel/site/src/locales/zh-CN/zh-CN.po
@@ -556,6 +556,10 @@ msgstr "请登录您的账户"
 msgid "Port"
 msgstr "端口"
 
+#: src/components/routes/system.tsx:398
+msgid "Precise utilization at the recorded time"
+msgstr "记录时间的精确使用率"
+
 #: src/components/routes/settings/general.tsx:58
 msgid "Preferred Language"
 msgstr "首选语言"
@@ -731,10 +735,6 @@ msgstr "当CPU使用率超过阈值时触发"
 msgid "Triggers when memory usage exceeds a threshold"
 msgstr "当内存使用率超过阈值时触发"
 
-#: src/components/routes/system.tsx:398
-msgid "Triggers when memory usage exceeds a threshold."
-msgstr "当内存使用率超过阈值时触发。"
-
 #: src/lib/utils.ts:285
 msgid "Triggers when status switches between up and down"
 msgstr "当状态在上和下之间切换时触发"
@@ -806,4 +806,3 @@ msgstr "YAML配置"
 #: src/components/routes/settings/layout.tsx:34
 msgid "Your user settings have been updated."
 msgstr "您的用户设置已更新。"
-
