--- a/beszel/site/src/locales/zh-HK/zh-HK.po
+++ b/beszel/site/src/locales/zh-HK/zh-HK.po
@@ -556,6 +556,10 @@ msgstr "請登錄到您的帳戶"
 msgid "Port"
 msgstr "端口"
 
+#: src/components/routes/system.tsx:398
+msgid "Precise utilization at the recorded time"
+msgstr "記錄時間的精確使用率"
+
 #: src/components/routes/settings/general.tsx:58
 msgid "Preferred Language"
 msgstr "首選語言"
@@ -731,10 +735,6 @@ msgstr "當CPU使用率超過閾值時觸發"
 msgid "Triggers when memory usage exceeds a threshold"
 msgstr "當記憶體使用率超過閾值時觸發"
 
-#: src/components/routes/system.tsx:398
-msgid "Triggers when memory usage exceeds a threshold."
-msgstr "當記憶體使用率超過閾值時觸發。"
-
 #: src/lib/utils.ts:285
 msgid "Triggers when status switches between up and down"
 msgstr "當狀態在上和下之間切換時觸發"
@@ -806,4 +806,3 @@ msgstr "YAML配置"
 #: src/components/routes/settings/layout.tsx:34
 msgid "Your user settings have been updated."
 msgstr "您的用戶設置已更新。"
-
