--- a/beszel/site/src/locales/zh-CN/zh-CN.po
+++ b/beszel/site/src/locales/zh-CN/zh-CN.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: zh\n"
 "Project-Id-Version: beszel\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2024-11-07 18:49\n"
+"PO-Revision-Date: 2024-11-09 16:57\n"
 "Last-Translator: \n"
 "Language-Team: Chinese Simplified\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
@@ -223,7 +223,7 @@ msgstr "复制主机名"
 
 #: src/components/add-system.tsx:169
 msgid "Copy Linux command"
-msgstr "复制Linux命令"
+msgstr "复制Linux安装命令"
 
 #: src/components/copy-to-clipboard.tsx:13
 msgid "Copy text"
@@ -328,7 +328,7 @@ msgstr "在过去的{2, plural, one {# 分钟} other {# 分钟}}中超过{0}{1}"
 
 #: src/components/routes/settings/config-yaml.tsx:72
 msgid "Existing systems not defined in <0>config.yml</0> will be deleted. Please make regular backups."
-msgstr "未在<0>config.yml</0>中定义的现有系统将被删除。请定期备份。"
+msgstr "未在<0>config.yml</0>中定义的客户端将被删除。请定期备份。"
 
 #: src/components/routes/settings/config-yaml.tsx:93
 msgid "Export configuration"
@@ -559,7 +559,7 @@ msgstr "端口"
 #: src/components/routes/system.tsx:400
 #: src/components/routes/system.tsx:516
 msgid "Precise utilization at the recorded time"
-msgstr "记录时间的精确使用率"
+msgstr "采集时间下的精确内存使用率"
 
 #: src/components/routes/settings/general.tsx:58
 msgid "Preferred Language"
@@ -685,7 +685,7 @@ msgstr "测试通知已发送"
 
 #: src/components/add-system.tsx:104
 msgid "The agent must be running on the system to connect. Copy the installation command for the agent below."
-msgstr "必须在系统上运行客户端之后才能连接。复制下面的代理安装命令。"
+msgstr "必须在系统上运行客户端之后才能连接。复制下面的客户端安装命令。"
 
 #: src/components/add-system.tsx:95
 msgid "The agent must be running on the system to connect. Copy the<0>docker-compose.yml</0> for the agent below."
@@ -783,7 +783,7 @@ msgstr "用户"
 
 #: src/components/routes/system.tsx:653
 msgid "Waiting for enough records to display"
-msgstr "等待足够的记录以显示"
+msgstr "正在收集足够的数据来显示"
 
 #: src/components/routes/settings/general.tsx:48
 msgid "Want to help us make our translations even better? Check out <0>Crowdin</0> for more details."
@@ -810,3 +810,4 @@ msgstr "YAML配置"
 #: src/components/routes/settings/layout.tsx:34
 msgid "Your user settings have been updated."
 msgstr "您的用户设置已更新。"
+
