--- a/beszel/site/src/locales/pt/pt.po
+++ b/beszel/site/src/locales/pt/pt.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: pt\n"
 "Project-Id-Version: beszel\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2024-12-17 21:36\n"
+"PO-Revision-Date: 2025-02-23 04:50\n"
 "Last-Translator: \n"
 "Language-Team: Portuguese\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -122,7 +122,7 @@ msgstr "A média excede <0>{value}{0}</0>"
 
 #: src/components/routes/system.tsx:499
 msgid "Average power consumption of GPUs"
-msgstr ""
+msgstr "Consumo médio de energia pelas GPU's"
 
 #: src/components/routes/system.tsx:387
 msgid "Average system-wide CPU utilization"
@@ -130,7 +130,7 @@ msgstr "Utilização média de CPU em todo o sistema"
 
 #: src/components/routes/system.tsx:517
 msgid "Average utilization of {0}"
-msgstr ""
+msgstr "Utilização média de {0}"
 
 #: src/components/command-palette.tsx:171
 #: src/components/navbar.tsx:94
@@ -298,7 +298,7 @@ msgstr "Documentação"
 #: src/components/add-system.tsx:121
 #: src/components/systems-table/systems-table.tsx:599
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: src/components/login/auth-form.tsx:173
 #: src/components/login/forgot-pass-form.tsx:53
@@ -346,7 +346,7 @@ msgstr "Falha na autenticação"
 #: src/components/routes/settings/layout.tsx:39
 #: src/components/routes/settings/notifications.tsx:63
 msgid "Failed to save settings"
-msgstr "Falha ao salvar configurações"
+msgstr "Falha ao guardar as definições"
 
 #: src/components/routes/settings/notifications.tsx:189
 msgid "Failed to send test notification"
@@ -377,7 +377,7 @@ msgstr "Geral"
 
 #: src/components/routes/system.tsx:498
 msgid "GPU Power Draw"
-msgstr ""
+msgstr "Consumo de Energia da GPU"
 
 #: src/components/systems-table/systems-table.tsx:353
 msgid "Grid"
@@ -406,7 +406,7 @@ msgstr "Idioma"
 
 #: src/components/systems-table/systems-table.tsx:339
 msgid "Layout"
-msgstr ""
+msgstr "Aspeto"
 
 #. Light theme
 #: src/components/mode-toggle.tsx:16
@@ -527,7 +527,7 @@ msgstr "A senha deve ter pelo menos 8 caracteres."
 
 #: src/components/login/auth-form.tsx:21
 msgid "Password must be less than 72 bytes."
-msgstr ""
+msgstr "A password tem que ter menos de 72 bytes."
 
 #: src/components/login/forgot-pass-form.tsx:33
 msgid "Password reset request received"
@@ -614,11 +614,11 @@ msgstr "Salve o endereço usando a tecla enter ou vírgula. Deixe em branco para
 #: src/components/routes/settings/general.tsx:106
 #: src/components/routes/settings/notifications.tsx:168
 msgid "Save Settings"
-msgstr "Salvar Configurações"
+msgstr "Guardar Definições"
 
 #: src/components/add-system.tsx:241
 msgid "Save system"
-msgstr ""
+msgstr "Guardar Sistema"
 
 #: src/components/navbar.tsx:134
 msgid "Search"
@@ -651,7 +651,7 @@ msgstr "Configurações"
 
 #: src/components/routes/settings/layout.tsx:33
 msgid "Settings saved"
-msgstr "Configurações salvas"
+msgstr "Definições guardadas"
 
 #: src/components/login/auth-form.tsx:236
 msgid "Sign in"
@@ -701,7 +701,7 @@ msgstr "Tabela"
 #. Temperature label in systems table
 #: src/components/systems-table/systems-table.tsx:218
 msgid "Temp"
-msgstr ""
+msgstr "Temp"
 
 #: src/components/routes/system.tsx:486
 #: src/lib/utils.ts:333
@@ -847,3 +847,4 @@ msgstr "Configuração YAML"
 #: src/components/routes/settings/layout.tsx:34
 msgid "Your user settings have been updated."
 msgstr "As configurações do seu usuário foram atualizadas."
+
