--- a/beszel/site/src/locales/cs/cs.po
+++ b/beszel/site/src/locales/cs/cs.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: cs\n"
 "Project-Id-Version: beszel\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-02-24 02:49\n"
+"PO-Revision-Date: 2025-03-14 00:50\n"
 "Last-Translator: \n"
 "Language-Team: Czech\n"
 "Plural-Forms: nplurals=4; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 3;\n"
@@ -303,12 +303,12 @@ msgstr "Dokumentace"
 #: src/components/systems-table/systems-table.tsx:141
 #: src/components/routes/system.tsx:344
 msgid "Down"
-msgstr ""
+msgstr "Nefunkční"
 
 #: src/components/add-system.tsx:125
 #: src/components/systems-table/systems-table.tsx:614
 msgid "Edit"
-msgstr ""
+msgstr "Upravit"
 
 #: src/components/login/forgot-pass-form.tsx:53
 #: src/components/login/auth-form.tsx:175
@@ -454,7 +454,7 @@ msgstr "Správa nastavení zobrazení a oznámení."
 
 #: src/components/add-system.tsx:226
 msgid "Manual setup instructions"
-msgstr ""
+msgstr "Pokyny k manuálnímu nastavení"
 
 #. Chart select field. Please try to keep this short.
 #: src/components/routes/system.tsx:671
@@ -544,7 +544,7 @@ msgstr "Heslo musí obsahovat alespoň 8 znaků."
 
 #: src/components/login/auth-form.tsx:21
 msgid "Password must be less than 72 bytes."
-msgstr ""
+msgstr "Heslo musí být menší než 72 bytů."
 
 #: src/components/login/forgot-pass-form.tsx:33
 msgid "Password reset request received"
@@ -556,7 +556,7 @@ msgstr "Pozastavit"
 
 #: src/components/systems-table/systems-table.tsx:142
 msgid "Paused"
-msgstr ""
+msgstr "Pozastaveno"
 
 #: src/components/routes/settings/notifications.tsx:96
 msgid "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
@@ -639,7 +639,7 @@ msgstr "Uložit nastavení"
 
 #: src/components/add-system.tsx:231
 msgid "Save system"
-msgstr ""
+msgstr "Uložit systém"
 
 #: src/components/navbar.tsx:134
 msgid "Search"
@@ -723,7 +723,7 @@ msgstr "Tabulka"
 #. Temperature label in systems table
 #: src/components/systems-table/systems-table.tsx:233
 msgid "Temp"
-msgstr ""
+msgstr "Teplota"
 
 #: src/lib/utils.ts:344
 #: src/components/routes/system.tsx:533
@@ -807,7 +807,7 @@ msgstr "Spustí se, když využití disku překročí prahovou hodnotu"
 #: src/components/systems-table/systems-table.tsx:140
 #: src/components/routes/system.tsx:342
 msgid "Up"
-msgstr ""
+msgstr "Funkční"
 
 #: src/components/systems-table/systems-table.tsx:337
 msgid "Updated in real time. Click on a system to view information."
@@ -875,3 +875,4 @@ msgstr "YAML konfigurace"
 #: src/components/routes/settings/layout.tsx:34
 msgid "Your user settings have been updated."
 msgstr "Vaše uživatelská nastavení byla aktualizována."
+
