--- a/beszel/site/src/locales/fr/fr.po
+++ b/beszel/site/src/locales/fr/fr.po
@@ -300,12 +300,12 @@ msgstr "Documentation"
 #: src/components/systems-table/systems-table.tsx:142
 #: src/components/routes/system.tsx:345
 msgid "Down"
-msgstr ""
+msgstr "Injoignable"
 
 #: src/components/add-system.tsx:126
 #: src/components/systems-table/systems-table.tsx:653
 msgid "Edit"
-msgstr ""
+msgstr "Éditer"
 
 #: src/components/login/forgot-pass-form.tsx:54
 #: src/components/login/auth-form.tsx:176
@@ -451,7 +451,7 @@ msgstr "Gérer les préférences d'affichage et de notification."
 
 #: src/components/add-system.tsx:227
 msgid "Manual setup instructions"
-msgstr ""
+msgstr "Guide pour une installation manuelle"
 
 #. Chart select field. Please try to keep this short.
 #: src/components/routes/system.tsx:673
@@ -541,7 +541,7 @@ msgstr "Le mot de passe doit contenir au moins 8 caractères."
 
 #: src/components/login/auth-form.tsx:22
 msgid "Password must be less than 72 bytes."
-msgstr ""
+msgstr "Le mot de passe doit être inférieur à 72 Octets."
 
 #: src/components/login/forgot-pass-form.tsx:34
 msgid "Password reset request received"
@@ -636,7 +636,7 @@ msgstr "Enregistrer les paramètres"
 
 #: src/components/add-system.tsx:232
 msgid "Save system"
-msgstr ""
+msgstr "Sauvegarder le système"
 
 #: src/components/navbar.tsx:134
 msgid "Search"
@@ -717,7 +717,7 @@ msgstr "Tableau"
 #. Temperature label in systems table
 #: src/components/systems-table/systems-table.tsx:244
 msgid "Temp"
-msgstr ""
+msgstr "Temp."
 
 #: src/lib/utils.ts:344
 #: src/components/routes/system.tsx:534
@@ -791,7 +791,7 @@ msgstr "Déclenchement lorsque l'utilisation de la mémoire dépasse un seuil"
 
 #: src/lib/utils.ts:314
 msgid "Triggers when status switches between up and down"
-msgstr "Déclenchement lorsque le statut passe d'opérationnel à indisponible"
+msgstr "Se déclenche lorsque le statut passe de \"Joignable\" à \"Injoignable\""
 
 #: src/lib/utils.ts:334
 msgid "Triggers when usage of any disk exceeds a threshold"
@@ -801,7 +801,7 @@ msgstr "Déclenchement lorsque l'utilisation de tout disque dépasse un seuil"
 #: src/components/systems-table/systems-table.tsx:141
 #: src/components/routes/system.tsx:343
 msgid "Up"
-msgstr ""
+msgstr "Joignable"
 
 #: src/components/systems-table/systems-table.tsx:350
 msgid "Updated in real time. Click on a system to view information."
@@ -869,3 +869,4 @@ msgstr "Configuration YAML"
 #: src/components/routes/settings/layout.tsx:35
 msgid "Your user settings have been updated."
 msgstr "Vos paramètres utilisateur ont été mis à jour."
+
