--- a/beszel/site/src/locales/it/it.po
+++ b/beszel/site/src/locales/it/it.po
@@ -300,12 +300,12 @@ msgstr "Documentazione"
 #: src/components/systems-table/systems-table.tsx:142
 #: src/components/routes/system.tsx:345
 msgid "Down"
-msgstr ""
+msgstr "Offline"
 
 #: src/components/add-system.tsx:126
 #: src/components/systems-table/systems-table.tsx:653
 msgid "Edit"
-msgstr ""
+msgstr "Modifica"
 
 #: src/components/login/forgot-pass-form.tsx:54
 #: src/components/login/auth-form.tsx:176
@@ -451,7 +451,7 @@ msgstr "Gestisci le preferenze di visualizzazione e notifica."
 
 #: src/components/add-system.tsx:227
 msgid "Manual setup instructions"
-msgstr ""
+msgstr "Istruzioni di configurazione manuale"
 
 #. Chart select field. Please try to keep this short.
 #: src/components/routes/system.tsx:673
@@ -541,7 +541,7 @@ msgstr "La password deve contenere almeno 8 caratteri."
 
 #: src/components/login/auth-form.tsx:22
 msgid "Password must be less than 72 bytes."
-msgstr ""
+msgstr "La password deve essere inferiore a 72 byte."
 
 #: src/components/login/forgot-pass-form.tsx:34
 msgid "Password reset request received"
@@ -636,7 +636,7 @@ msgstr "Salva Impostazioni"
 
 #: src/components/add-system.tsx:232
 msgid "Save system"
-msgstr ""
+msgstr "Salva sistema"
 
 #: src/components/navbar.tsx:134
 msgid "Search"
@@ -717,7 +717,7 @@ msgstr "Tabella"
 #. Temperature label in systems table
 #: src/components/systems-table/systems-table.tsx:244
 msgid "Temp"
-msgstr ""
+msgstr "Temperatura"
 
 #: src/lib/utils.ts:344
 #: src/components/routes/system.tsx:534
@@ -801,7 +801,7 @@ msgstr "Attiva quando l'utilizzo di un disco supera una soglia"
 #: src/components/systems-table/systems-table.tsx:141
 #: src/components/routes/system.tsx:343
 msgid "Up"
-msgstr ""
+msgstr "Attivo"
 
 #: src/components/systems-table/systems-table.tsx:350
 msgid "Updated in real time. Click on a system to view information."
@@ -869,3 +869,4 @@ msgstr "Configurazione YAML"
 #: src/components/routes/settings/layout.tsx:35
 msgid "Your user settings have been updated."
 msgstr "Le impostazioni utente sono state aggiornate."
+
