--- a/beszel/site/src/locales/ru/ru.po
+++ b/beszel/site/src/locales/ru/ru.po
@@ -300,12 +300,12 @@ msgstr "Документация"
 #: src/components/systems-table/systems-table.tsx:142
 #: src/components/routes/system.tsx:345
 msgid "Down"
-msgstr ""
+msgstr "Не в сети"
 
 #: src/components/add-system.tsx:126
 #: src/components/systems-table/systems-table.tsx:653
 msgid "Edit"
-msgstr ""
+msgstr "Редактировать"
 
 #: src/components/login/forgot-pass-form.tsx:54
 #: src/components/login/auth-form.tsx:176
@@ -636,7 +636,7 @@ msgstr "Сохранить настройки"
 
 #: src/components/add-system.tsx:232
 msgid "Save system"
-msgstr ""
+msgstr "Сохранить систему"
 
 #: src/components/navbar.tsx:134
 msgid "Search"
@@ -717,7 +717,7 @@ msgstr "Таблица"
 #. Temperature label in systems table
 #: src/components/systems-table/systems-table.tsx:244
 msgid "Temp"
-msgstr ""
+msgstr "Темп"
 
 #: src/lib/utils.ts:344
 #: src/components/routes/system.tsx:534
@@ -801,7 +801,7 @@ msgstr "Срабатывает, когда использование любог
 #: src/components/systems-table/systems-table.tsx:141
 #: src/components/routes/system.tsx:343
 msgid "Up"
-msgstr ""
+msgstr "В сети"
 
 #: src/components/systems-table/systems-table.tsx:350
 msgid "Updated in real time. Click on a system to view information."
